# BookStore

./: .gitignore  .swp  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/viewsets/: product_viewset.py
