[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Joaofre <joaovitor6586@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
factory-boy = "^3.2.1"
django = "^4.1.7"
django-db = "^0.0.7"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
psycopg2 = "^2.9.9"
psycopg = "^3.1.17"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
